Fix font and scrollbar error

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -34,11 +34,13 @@
         line-height: 1.3;
         padding: 12%;
         background-color: $ghost-mauve;
-        display: flex;
-        align-items: center;
-        div {
+        // display: flex;
+        // align-items: center;
+        & > div {
             display: flex;
             justify-content: space-between;
+            flex-direction: column;
+            padding-bottom: 20px;
             width: 100%;
             height: auto;
             p {
@@ -102,10 +104,10 @@
         main {
             padding: 8% 12%;
         }
-        div:first-of-type {
-            flex-direction: column;
-            overflow-y: auto;
-        }
+        // #main-container {
+        //     flex-direction: column;
+        //     overflow-y: auto;
+        // }
         section {
             width: 100% !important;
             *:not(p) {
