--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -48,6 +48,7 @@
     }
     main {
         padding: 0;
+        overflow: hidden;
         .postcard {
             width: 100%;
             height: 100%;
