--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -35,6 +35,7 @@ main {
         display: flex;
         justify-content: center;
         header {
+            left: 0;
             // a:not(.selected):hover, a:not(.selected):active {
             //     font-weight: bold;
             // }
@@ -53,7 +54,7 @@ main {
         @media (min-width: 768px) {
             #cross {
                 top: 70px;
-                right: 90px;
+                right: 70px;
             }
         }
         .menu-bar {
@@ -74,7 +75,7 @@ main {
             &.right {
                 transform: rotate(90deg);
                 transform-origin: right top;
-                right: 20px;
+                right: 0;
                 & > ul {
                     justify-content: flex-start;
                     margin-left: 50px;
@@ -95,6 +96,8 @@ main {
         footer {
             display: flex;
             justify-content: center;
+            left: 0;
+            bottom: 0;
             p {
                 align-self: center;
                 em {
